fix image alignment for about section

--- a/src/components/page-sections/about.module.css
+++ b/src/components/page-sections/about.module.css
@@ -44,6 +44,8 @@
   }
   .image {
     display: flex;
-    place-self: center;
+    align-self: center;
+    justify-self: right;
+    height: 100%;
   }
 }
